# gaze-correction-cam

./: .gitignore  AGENTS.md  FUTURE_IMPROVEMENTS.md  README.md  bin_calibrate.py  bin_regz_socket_MP_FD.py  bin_single_window.py  bin_test_dlib_detection.py  bin_test_mediapipe_detection.py  bin_virtual_cam.py  gaze_correct.py  pyproject.toml  virtual_cam.py
displayers/: dis_gaze_corrected.py  dis_raw_video.py  dis_single_window.py  face_predictor.py  gaze_corrector.py  single_window.py
docs/: useful_links.md
model_managers/: __init__.py  gaze_corrector_v1.py  gaze_corrector_v1_01.yaml  user_settings_db.py
tf_models/: __init__.py  gaze_warp_model.py  spatial_transform.py
tf_models/gaze_corrector_v1/: __init__.py  gaze_warp_model.py  layers.py
utils/: camera.py
