[project]
name = "gaze-correction-cam"
version = "0.1.0"
description = ""
authors = [
    {name = "WangWilly",email = "s89667654@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tensorflow (>=2.19.0,<3.0.0)",
    "dlib (>=20.0.0,<21.0.0)",
    "opencv-contrib-python (>=4.13.0,<5.0.0.0)",
    "pyobjc (>=11.0,<13.0)",
    "mediapipe (>=0.10.32,<0.11.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "pyvirtualcam (>=0.15.0,<0.16.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

